# kewpie-scraper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: reusability_demo.py
src/kewpie/: __init__.py  __main__.py  challenge.py  models.py  pipeline.py
src/kewpie/browser/: __init__.py  base.py  camoufox_backend.py  nodriver_backend.py
src/kewpie/cli/: __init__.py  doctor.py  main.py
src/kewpie/config/: __init__.py  loader.py  sources.example.json  vocabulary.example.json
src/kewpie/engine/: __init__.py  cache.py  client.py  identity.py  proxies.py  rate_limit.py  retry.py  session.py
src/kewpie/escalation/: __init__.py  fetcher.py  ladder.py  policy.py  tiers.py
src/kewpie/extraction/: __init__.py  html.py  vocabulary.py
src/kewpie/sources/: __init__.py  base.py  conditional.py  errors.py  newsapi.py  reddit.py  registry.py  robots.py  rss.py  web.py  x.py
src/kewpie/store/: __init__.py  raw_store.py  signal_store.py
tests/: conftest.py  test_challenge.py  test_engine.py  test_escalation.py  test_extraction.py  test_live.py  test_sources.py  test_store_config_models.py
